Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-22386

Qt Creator crashed while reparsing project settings

    XMLWordPrintable

Details

    • d0a51796a6ae74496612366a07b0eb3299977284 (qt-creator/qt-creator/4.9)

    Description

      I was editing an environment variable which caused project to be reparsed and QtC crashed in Qbs internals.
      See the attachment for the stacktrace.

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-22386
        # Subject Branch Project Status CR V

        Activity

          People

            kandeler Christian Kandeler
            arch Ivan Komissarov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes